--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -382,27 +382,27 @@ c("Zero-inflated Negative binomial", fit_brmZINB1$criteria$kfold$estimates[, "Es
 
 
 ```{r}
-pp_check(brmpois, type = "bars_grouped", ndraws = 100, group = "regio",
+pp_check(brmpois1, type = "bars_grouped", ndraws = 100, group = "regio",
          facet_args = list(ncol = 1, scales = "free_y"))
 ```
 
 
 
 ```{r}
-pp_check(brmnegbin, type = "bars_grouped", ndraws = 100, group = "regio",
+pp_check(fit_brmnegbin1, type = "bars_grouped", ndraws = 100, group = "regio",
          facet_args = list(ncol = 1, scales = "free_y"))
 ```
 
 
 
 ```{r}
-pp_check(brmZIP, type = "bars_grouped", ndraws = 100, group = "regio",
+pp_check(fit_brmZIP1, type = "bars_grouped", ndraws = 100, group = "regio",
          facet_args = list(ncol = 1, scales = "free_y"))
 ```
 
 
 ```{r}
-pp_check(brmZINB, type = "bars_grouped", ndraws = 100, group = "regio",
+pp_check(fit_brmZINB1, type = "bars_grouped", ndraws = 100, group = "regio",
          facet_args = list(ncol = 1, scales = "free_y"))
 ```
 
